--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "api": "json-server ./src/services/server.json --host 192.168.1.108 --port 3333 --delay 700"
+    "api": "json-server ./src/services/server.json --host {YOUR_IP} --port 3333 --delay 700"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
@@ -22,12 +22,14 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "json-server": "^0.17.0",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1285.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
