--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,16 @@ target 'rentx' do
 
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
 
+  # If you're using autolinking, this line might not be needed
+  pod 'WatermelonDB', :path => '../node_modules/@nozbe/watermelondb'
+
+  # NOTE: Do not remove, needed to keep WatermelonDB compiling:
+  pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi', :modular_headers => true
+
+  # NOTE: This is required as of v0.23
+  pod 'simdjson', path: '../node_modules/@nozbe/simdjson'
+
+
   # Flags change depending on the env values.
   flags = get_default_flags()
 
