--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1285.0",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.8.0",
